--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -5,11 +5,11 @@
     <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
         <div class="col-lg-1 flex-column">
             <button class="m-1">
-                <img src="~/img/like.png" alt="Like" />
+                <img src="~/img/icon_like_filled.png" alt="Like" />
             </button>
             <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
             <button class="m-1">
-                <img src="~/img/un_like.png" alt="Like" />
+                <img src="~/img/icon_dislike_filled.png.png" alt="Like" />
             </button>
         </div>
         <div class="col-lg-11">
