--- a/K_Bridge/Views/Shared/Components/LayoutStatList/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutStatList/Default.cshtml
@@ -11,7 +11,7 @@
                     <p class="p-0 m-0 text-color-logo fs-6">Chủ đề</p>
                 </div>
                 <div class="row text-wrap m-0 d-none d-sm-flex">
-                    <p class="p-0 m-0 text-color-logo fs-6">Có hơn 80.000 chủ đề đặt ra</p>
+                    <p class="p-0 m-0 text-color-logo fs-6">Có hơn @ViewBag.TotalTopics chủ đề đặt ra</p>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
                     <p class="p-0 m-0 text-color-logo fs-6">Bài viết</p>
                 </div>
                 <div class="row text-wrap m-0 d-none d-sm-flex">
-                    <p class="p-0 m-0 text-color-logo fs-6">Tổng 130,000 bài viết </p>
+                    <p class="p-0 m-0 text-color-logo fs-6">Tổng @ViewBag.TotalPosts bài viết </p>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <p class="p-0 m-0 text-color-logo fs-6">Thành viên</p>
                 </div>
                 <div class="row text-wrap m-0 d-none d-sm-flex">
-                    <p class="p-0 m-0 text-color-logo fs-6">Hơn 500 thành viên</p>
+                    <p class="p-0 m-0 text-color-logo fs-6">Hơn @ViewBag.TotalUsers thành viên</p>
                 </div>
             </div>
         </div>
