--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -55,7 +55,11 @@
                                 @latestPost.Topic.Forum.TagName
                             </div>
                         </div>
-                        <div class="newest-card-des" style="font-size:13px;">@latestPost.Content</div>
+                        <div class="newest-card-des" style="font-size:13px;">
+                            <div class="reply-content">
+                                @Html.Raw(latestPost.Content)
+                            </div>
+                            </div>
                         <div class="d-flex justify-content-end mt-2">
                             <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
                             <div class="newest-card-username mx-2">@latestPost.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(latestPost.CreatedAt)</div>
@@ -97,20 +101,23 @@
                                     <div class="fw-normal p-0 d-flex justify-content-center">Bài viết</div>
                                 </div>
                             </div>
-                            @foreach (var post in topic.Posts)
-                            {
                             <div class="col-lg-4 p-0 d-flex align-items-center">
                                 <div class="col-lg-2 p-0 m-2 d-flex align-items-center">
                                     <img src="/img/avatar_40.png" alt="avatar" style="width: 40px; height: 40px;" />
                                 </div>
                                 <div class="col-lg-8 d-flex flex-column justify-content-center">
-                                        <div class="fw-12 p-0 m-0">@post.Content</div>
+                                        <div class="fw-12 p-0 m-0">
+
+                                            <div class="reply-content">
+                                            @Html.Raw(topic.Posts[0].Content)
+                                            </div>
+
+                                        </div>
                                     <div class="fs-12 opacity-75 d-flex align-items-center">
-                                            @post.CreatedAtFormatted - <p class="fw-bold ms-1 d-flex p-0 m-0">@post.User.Username</p>
+                                        @topic.Posts[0].CreatedAtFormatted - <p class="fw-bold ms-1 d-flex p-0 m-0">@topic.Posts[0].User.Username</p>
                                     </div>
                                 </div>
                             </div>
-                            }
                         </div>
                     </div>
 
