--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -21,20 +21,18 @@
     <div class="row m-0 p-0 mt-3 ">
         <div class="col-lg-1 flex-column">
             <button class="m-1">
-                <img src="~/img/like.png" alt="Like" />
+                <img src="~/img/icon_like_filled.png" alt="Like" />
             </button>
             <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
             <button class="m-1">
-                <img src="~/img/un_like.png" alt="Like" />
+                <img src="~/img/icon_dislike_filled.png.png" alt="Like" />
             </button>
         </div>
         <div class="col-lg-11">
-            <div>
-                <p>
-                    @ViewBag.Post.Content
-                </p>
-                <img src="~/img/wallpaper.png" alt="Alternate Text" />
+            <div class="reply-content">
+                @Html.Raw(ViewBag.Post.Content)
             </div>
+            <img src="~/img/wallpaper.png" alt="Alternate Text" />
         </div>
         <div class="d-flex flex-column">
             <div class="p-3 justify-content-center align-content-center d-flex">
