--- a/K_Bridge/wwwroot/css/Post.css
+++ b/K_Bridge/wwwroot/css/Post.css
@@ -80,3 +80,21 @@
     border-radius:5px;
     margin-top:20px;
 }
+
+#editor {
+    padding-left: 20px; /* Tạo khoảng trống cho số thứ tự và bullet */
+}
+
+    #editor ul, #editor ol {
+        margin: 0;
+        padding-left: 20px;
+    }
+
+    #editor ul {
+        list-style-type: disc; /* Hiển thị bullet cho danh sách không có thứ tự */
+    }
+
+    #editor ol {
+        list-style-type: decimal; /* Hiển thị số cho danh sách có thứ tự */
+    }
+
