--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -14,7 +14,9 @@
         </div>
         <div class="col col-md-7 d-flex justify-content-center">
             <div class="input-group rounded-2 border border-main-color-layout px-2" style="max-width: 420px;">
-                <input type="text" class="focus flex-grow-1 bg-transparent text-color-layout text-white" placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="button-addon2">
+                <input type="text" class="focus flex-grow-1 bg-transparent text-color-layout text-white" 
+                placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="button-addon2"
+                       id="searchInput">
                 <button class="btn btn-main-color-header" type="button" id="button-addon2">
                     <img src="/img/iconSearch.png" alt="Search Icon">
                 </button>
@@ -288,4 +290,30 @@
     //         loginButtons.parentNode.replaceChild(userInfo, loginButtons);
     //     }
     // }
+</script>
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var searchButton = document.getElementById('button-addon2');
+        var searchInput = document.getElementById('searchInput');
+
+        // Thêm sự kiện click cho nút tìm kiếm
+        searchButton.addEventListener('click', function () {
+            var searchKey = searchInput.value.trim();
+            if (searchKey) {
+                window.location.href = '/Search?key=' + encodeURIComponent(searchKey);
+            }
+        });
+
+        // Thêm sự kiện keypress để xử lý khi nhấn Enter trong ô tìm kiếm
+        searchInput.addEventListener('keypress', function (event) {
+            if (event.key === 'Enter') {
+                var searchKey = searchInput.value.trim();
+                if (searchKey) {
+                    window.location.href = '/Search?key=' + encodeURIComponent(searchKey);
+                }
+            }
+        });
+    });
 </script>
