--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
             {
                 <div class="row m-0 px-3 py-2" onclick="window.location.href='/Post/Details?post=@latestPost.ID'">
                     <div class="col-2 d-flex flex-column justify-content-center">
-                        <div class="newest-card-stat py-2">0 Câu trả lời</div>
+                        <div class="newest-card-stat py-2">@(latestPost.Replies?.Count() ?? 0) Câu trả lời</div>
                         <div class="newest-card-stat py-2">@latestPost.ViewCount Lượt xem</div>
                     </div>
                     <div class="col-10">
