--- a/K_Bridge/Views/User/Index.cshtml
+++ b/K_Bridge/Views/User/Index.cshtml
@@ -117,6 +117,10 @@
     </div>
 </div>
 
+<form id="logoutForm" asp-action="Logout" asp-controller="Home" method="post" class="mt-3 flex justify-content-end">
+    <button type="submit" class="btn-logout">Đăng xuất khỏi tài khoản</button>
+</form>
+
 <!-- Button trigger modal -->
 @* <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Launch demo modal
