--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -8,7 +8,7 @@
         </a>
     </li>
     <li class="nav-item mt-2">
-        <a class="nav-link nav-link-text" href="/Admin/Accounts">
+        <a class="nav-link nav-link-text" href="/Admin/Accounts/List">
             <img src="~/img/icon_user_50.png" class="sidebar-icon" /> Tài khoản
         </a>
     </li>
