--- a/K_Bridge/Pages/_ViewImports.cshtml
+++ b/K_Bridge/Pages/_ViewImports.cshtml
@@ -3,7 +3,8 @@
 @using K_Bridge.Models
 @using K_Bridge.Infrastructure
 @using K_Bridge.Repositories
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, K_Bridge
