--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -1,4 +1,6 @@
-﻿<ul class="nav flex-column" id="nav_accordion">
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+<ul class="nav flex-column" id="nav_accordion">
     <li class="nav-item sidebar-title">
         <h5>TRANG QUẢN TRỊ</h5>
     </li>
@@ -50,6 +52,17 @@
             </li>
         </ul>
     </li>
+    @{
+        var role = HttpContextAccessor.HttpContext.Session.GetString("AdminRole");
+    }@if (role == "Mgr")
+    {
+        <li class="nav-item mt-2">
+            <a class="nav-link nav-link-text" href="#">
+                <img src="~/img/icon_admin_50.png" class="sidebar-icon" /> Quản trị viên
+            </a>
+        </li>
+    }
+
     <li class="nav-item mt-2">
         <a class="nav-link nav-link-text" href="#">
             <img src="~/img/icon_admin_50.png" class="sidebar-icon" /> Quản trị viên
