--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -54,6 +54,7 @@
     </li>
     @{
         var role = HttpContextAccessor.HttpContext.Session.GetString("AdminRole");
+        // Debug: Hiển thị giá trị Role trên trang để kiểm tra
     }@if (role == "Mgr")
     {
         <li class="nav-item mt-2">
@@ -63,11 +64,6 @@
         </li>
     }
 
-    <li class="nav-item mt-2">
-        <a class="nav-link nav-link-text" href="#">
-            <img src="~/img/icon_admin_50.png" class="sidebar-icon" /> Quản trị viên
-        </a>
-    </li>
 
     <li class="nav-item mt-2">
         <a class="nav-link nav-link-text" href="#">
