--- a/K_Bridge/Pages/Admin/Accounts/List.cshtml
+++ b/K_Bridge/Pages/Admin/Accounts/List.cshtml
@@ -59,13 +59,46 @@
                             <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Accounts/Edit/@account.ID'">
                                 <img src="/img/icon_edit_50.png" alt="Chỉnh sửa" width="20" height="20">
                             </button>
-                            <button class="account-table-delete-btn">
+                            <button class="account-table-delete-btn"
+                                    type="button"
+                                    data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 <img src="/img/icon_trash_50.png" alt="Chỉnh sửa" width="25" height="25">
                             </button>
                         </div>
                     </td>
                 </tr>
+                <!-- Modal -->
+                <div class="modal fade modal-new-post-overall rounded-3" s style="overflow-x: hidden;" id="exampleModal" tabindex="-1"
+                     aria-labelledby="newPostModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" style="border-radius: 20px;">
+                        <div class="modal-content">
+                            <div class="modal-header modal-new-post-header py-2 px-3">
+                                <h5 class="modal-title text-uppercase" id="newPostModalLabel">Xác nhận</h5>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body bg-main-color-layout d-flex flex-column py-4">
+                                <div class="text-color-header  justify-content-center flex-column m-auto" style="min-height:100px;">
+                                    <p class="fs-3 text-color-header fw-bold m-0 mt-2">Bạn chắc chắn chứ?</p>
+                                    <p class="text-color-headerfw-bold m-0 p-0">Các thay đổi sẽ không được lưu lại!</p>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-center bg-main-color-layout pb-4 rounded-bottom">
+                                <button type="button" class="rounded-2 px-3 py-1 btn-confirm me-1" data-bs-dismiss="modal" style="min-width:148px;">Huỷ</button>
+
+
+                                <form method="post">
+                                    <button type="submit" class="rounded-2 px-3 py-1 btn-confirm ms-1" style="min-width:148px;" asp-page-handler="Delete" asp-route-id="@account.ID">
+                                        Xoá
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             }
+
         </tbody>
     </table>
 </div>
@@ -105,3 +138,4 @@
 </div>
     </ul>
 </div>
+
