--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -135,9 +135,10 @@
                     </div>
                 </div>
             </form>
-            <div>
-                <p class="p-3 text-color-logo fs-12">Chưa có tài khoản? <a href="#" id="switchToSignup">Đăng ký</a> ngay</p>
-            </div>
+            <div class="p-3 d-flex justify-content-between">
+                <p class="mt-2 text-color-logo fs-12">Chưa có tài khoản? <a href="#" id="switchToSignup">Đăng ký</a> ngay</p>
+                <p class="mt-2 text-color-logo fs-12"><a href="/ForgetPassword">Quên mật khẩu? </a> </p>
+            </div>            
         </div>
     </div>
 </div>
