--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -66,7 +66,7 @@
 
 
     <li class="nav-item mt-2">
-        <a class="nav-link nav-link-text" href="#">
+        <a class="nav-link nav-link-text" href="/Account/Login?action=logout">
             <img src="~/img/icon_logout_50.png" class="sidebar-icon" /> Đăng xuất
         </a>
     </li>
