--- a/K_Bridge/Pages/Admin/Forums.cshtml
+++ b/K_Bridge/Pages/Admin/Forums.cshtml
@@ -1,7 +1,7 @@
-﻿@page
+﻿@page "{id:int}"
 @model K_Bridge.Pages.Admin.ForumsModel
 @{
-    ViewData["Title"] = "Tên Diễn đàn";
+    ViewData["Title"] = Model.Forum.Name;
 }
 
 <div class="row account-navigate mt-3 px-5 align-items-center ">
@@ -13,7 +13,7 @@
              alt="Tổng quan" width="10" height="20">
         <div class="account-navigate-text custom-cursor-pointer "
              onclick="window.location.href='/Admin/Forums'">
-            Lập trình
+            @Model.Forum.Name
         </div>
     </div>
     <div class="col-9">
@@ -21,8 +21,8 @@
 </div>
 <div class="row mt-3 px-5">
     <div class="col-3">
-        <div class="account-title">Lập trình</div>
-        <div class="account-subtitle">Quản lý diễn đàn lập trình</div>
+        <div class="account-title"> @Model.Forum.Name</div>
+        <div class="account-subtitle">Quản lý diễn đàn @Model.Forum.Name </div>
     </div>
     <div class="col-9 d-flex justify-content-end align-items-center custom-cursor-pointer">
         <div class=" account-create-button px-4 h-75 d-flex align-items-center" onclick="window.location.href='/Admin/Forums/Create'">
@@ -44,20 +44,20 @@
             </tr>
         </thead>
         <tbody>
-            @for (int i = 1; i < 9; i++)
+            @foreach (var topic in Model.Topics)
             {
                 <tr>
-                    <th scope="row">@i</th>
+                    <th scope="row">@topic.ID</th>
                     <td>42</td>
-                    <td>Chia sẻ đề cương thi</td>
+                    <td>@topic.Name</td>
                     <td>
                         <div class="d-flex justify-content-evenly">
-                            <div>121</div>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics"> <u>Chi tiết</u> </a>
+                            <div>@topic.Posts.Count</div>
+                            <a class="text-color-logo" href="/Admin/Forums/Topics/@topic.ID"> <u>Chi tiết</u> </a>
                         </div>
                     </td>
-                    <td>21/12/2024</td>
-                    <td>21/12/2026</td>
+                    <td>@topic.CreatedAt.ToString("dd/MM/yyyy")</td>
+                    <td>@(topic.UpdatedAt?.ToString("dd/MM/yyyy")??"")</td>
                     <td>
                         <div>
                             <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Forums/Edit'">
