--- a/K_Bridge/Pages/Admin/Forums/Topics.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/Topics.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int}"
 @model K_Bridge.Pages.Admin.Forums.TopicModel
 @{
 }
@@ -18,7 +18,7 @@
              alt="Tổng quan" width="10" height="20">
         <div class="account-navigate-text custom-cursor-pointer "
              onclick="window.location.href='/Admin/Forums/Topics'">
-            Bài viết
+            @Model.Topic.Name
         </div>
     </div>
     <div class="col-9">
@@ -26,8 +26,8 @@
 </div>
 <div class="row mt-3 px-5">
     <div class="col-5">
-        <div class="account-title">Bài viết</div>
-        <div class="account-subtitle">Quản lý bài viết mục Chia sẻ đề cương thi</div>
+        <div class="account-title">@Model.Topic.Name</div>
+        <div class="account-subtitle">Quản lý bài viết mục @Model.Topic.Name</div>
     </div>
 </div>
 <div class="row px-5">
@@ -44,54 +44,70 @@
             </tr>
         </thead>
         <tbody>
-            @for (int i = 1; i < 9; i++)
+            @foreach (var post in Model.Posts)
             {
-                if( i < 7 && i > 2)
-                {
-                    <tr style="background-color: rgba(0, 212, 98, 0.26)">
-                        <th scope="row">@i</th>
-                        <td>test1</td>
-                        <td>Xin đề cương môn..</td>
-                        <td >Đã duyệt</td>
+                <tr>
+                    <th scope="row">@post.ID</th>
+                    <td>@post.User.Username</td>
+                    <td>@post.Content</td>
+                    <td>Đã duyệt</td>
 
-                        <td>21/12/2024</td>
-                        <td>21/12/2026</td>
-                        <td>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
-                        </td>
-                    </tr>
-                }else if(i > 6)
-                {
-                    <tr style="background-color: rgba(255, 65, 65, 0.26)">
-                        <th scope="row">@i</th>
-                        <td>test1</td>
-                        <td>Xin đề cương môn..</td>
-                        <td>Đã từ chối</td>
-
-                        <td>21/12/2024</td>
-                        <td>21/12/2026</td>
-                        <td>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
-                        </td>
-                    </tr>
-                }
-                else
-                {
-                    <tr>
-                        <th scope="row">@i</th>
-                        <td>test1</td>
-                        <td>Xin đề cương môn..</td>
-                        <td>Đang chờ</td>
-
-                        <td>21/12/2024</td>
-                        <td>21/12/2026</td>
-                        <td>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
-                        </td>
-                    </tr>
-                }
-                
+                    <td>@post.CreatedAt.ToString("dd/MM/yyyy")</td>
+                    <td>@(post.UpdatedAt?.ToString("dd/MM/yyyy") ?? "")</td>
+                    <td>
+                        <a class="text-color-logo" href="/Admin/Forums/Topics/Posts/Preview/@post.ID"> <u>Chi tiết</u> </a>
+                    </td>
+                </tr>
             }
+            @*             @for (int i = 1; i < 9; i++)
+            {
+            if( i < 7 && i > 2)
+            {
+            <tr style="background-color: rgba(0, 212, 98, 0.26)">
+            <th scope="row">@i</th>
+            <td>test1</td>
+            <td>Xin đề cương môn..</td>
+            <td >Đã duyệt</td>
+
+            <td>21/12/2024</td>
+            <td>21/12/2026</td>
+            <td>
+            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
+            </td>
+            </tr>
+            }else if(i > 6)
+            {
+            <tr style="background-color: rgba(255, 65, 65, 0.26)">
+            <th scope="row">@i</th>
+            <td>test1</td>
+            <td>Xin đề cương môn..</td>
+            <td>Đã từ chối</td>
+
+            <td>21/12/2024</td>
+            <td>21/12/2026</td>
+            <td>
+            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
+            </td>
+            </tr>
+            }
+            else
+            {
+            <tr>
+            <th scope="row">@i</th>
+            <td>test1</td>
+            <td>Xin đề cương môn..</td>
+            <td>Đang chờ</td>
+
+            <td>21/12/2024</td>
+            <td>21/12/2026</td>
+            <td>
+            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
+            </td>
+            </tr>
+            }
+
+            }
+            *@
         </tbody>
     </table>
 </div>
