--- a/K_Bridge/Pages/_ViewImports.cshtml
+++ b/K_Bridge/Pages/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using K_Bridge.Models
 @using K_Bridge.Infrastructure
 @using K_Bridge.Repositories
+@using K_Bridge.Helpers
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
 
