--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -77,15 +77,17 @@
         <div class="d-flex flex-column mt-4 h-auto w-auto rounded-8 bg-main-color-background"
              style="border-top:5px solid @GetForumColorHelper.GetForumBackgroundColor(forum.ID);">
             <button id="toggle-cate-@forum.ID" class="flex-grow-0 border-main-color-logo border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
-                <div class="text-uppercase text-decoration-none text-black" href="/Category/List?forum=@forum.Name">@forum.Name</div>
+                @* <div class="text-uppercase text-decoration-none text-black" href="/Category/List?forum=@forum.Name">@forum.Name</div> *@
+                <div class="text-uppercase text-decoration-none text-black" onclick="window.location.href='/Category/TopicList'">@forum.Name</div>
+
                 <img id="arrow-icon-cate-@forum.ID" src="/img/arrow_down.png" alt="arrow_down" />
             </button>
             @* Topic *@
             <div id="container-cate-@forum.ID">
                 @foreach (var topic in forum.Topics)
                 {
-                    <div class="w-auto rounded-3">
-                        <div class="row flex-nowrap p-2 m-0">
+                    <div class="w-auto rounded-3" >
+                        <div class="row flex-nowrap p-2 m-0" >
                             <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
                                 <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
                             </div>
