--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -11,9 +11,10 @@
                 <div class="mb-2 d-md-flex flex-column">
                     <div class="d-md-flex align-items-center">
                         <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
-                        <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">@chat.Username</div>
+                        <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">@chat.Username
+                            <div class=" fs-12 rounded-3 text-color-logo mb-1 text-break" style="margin-right: 4px;">@chat.Content</div
+                        </div>
                     </div>
-                    <div class="message fs-12 rounded-3 text-color-logo mb-1 text-break" style="margin-right: 4px;">@chat.Content</div>
                 </div>
             }
         </div>
